fix: payin - updated spacing for design from review

--- a/sass/themes/payin/sportrelief/components/cards/_cards.scss
+++ b/sass/themes/payin/sportrelief/components/cards/_cards.scss
@@ -7,7 +7,8 @@
 .cards-wall {
 
   &.cards {
-    padding-top: 30px;
+    padding: 0 0 80px;
+
   }
 
   .card {
